[package]
name = "encryo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3" # Framework web untuk API
tokio = { version = "1", features = ["full"] } # Runtime asynchronous
aes-gcm = "0.10" # Algoritma enkripsi AES-GCM
serde = { version = "1", features = ["derive"] } # Untuk serialisasi/deserialisasi JSON
base64 = "0.22.1" # Encoding Base64
rand = "0.8" # Untuk nonce
